Revision history for DBIx-Class-Migration

0.009   TBD
        - changed the way we look for a schema so that commands that don't need
          one (like help and version) can still run.

0.008   01 March 2012
        - Fixed failing test when optional dependency is not installed
        - help command now does something meaningful (felliott++)
        - test case for help command

0.007   29 February 2012
        - Catalyst::TraitFor::Model::DBIC::Schema::FromMigration now lets you
          set some connect_info args instead of deleting them.
        - silence some warnings about my unclear use of 'shift'
        - Fixed a use.t problem where I was trying to check a module that had
          optional dependencies

0.006   28 February 2012
        - let you dump fixtures from an unversioned DB, but warn about it.
        - FAQ entry about this

0.005   27 February 2012
        - solved a problem when the msql socket path can exceed 104 characters
        - make use of existing Test::mysqld methods instead of guessing
        - minor fixes to incorrect test messages
        - fixed mistakes in the dependency list

0.004   27 February 2012
        - Started to develop 'dbic-migration help' command
        - make the pg and mysql tests optional
        - removed some pointless whitespace

0.003   26 February 2012
        - documentation updates
        - added some missing deps
        - fixed RT#75323 (tests using optional dependencies) (Fitz Elliott)++
        - started to stub out better commandline help

0.002   24 February 2012
        - fixed some POD issues with the first release

0.001   24 February 2012
        - initial release with all features complete