@@ -3,6 +3,8 @@ Revision history for DBIx-Class-Migration
 0.009   TBD
         - changed the way we look for a schema so that commands that don't need
           one (like help and version) can still run.
+        - if a postgresql sandbox is already running, just use it and don't try
+          (and fail) to start it again.
 
 0.008   01 March 2012
         - Fixed failing test when optional dependency is not installed
